# lambdachain

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  lambdachain.cabal
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy.yml  osv-scanner.yml
src/Block/: Block.hs
src/Blockchain/: Blockchain.hs
src/Consensus/: Consensus.hs
src/Cryptography/: Hash.hs  HomomorphicEncryption.hs
src/Hash/: Hash.hs  HashMock.hs
src/MerkleTree/: MerkleTree.hs
src/Network/: Network.hs
src/Security/: HomomorphicEncryption.hs  KeyEnv.hs  Security.hs
src/Transaction/: Transaction.hs
src/ZKP/: ZKP.hs
src/app/: Main.hs
test/: Main.hs
