name:           lambdachain
version:        0.4.0.0
cabal-version:  >= 1.8
description:    A blockchain implementation with ZKP and robust security features
author:         Sagar Shirwalkar
maintainer:     https://github.com/sagar-shirwalkar
category:       Development
build-type:     Simple

library
  hs-source-dirs:      src
  exposed-modules:     Block.Block
                      , Transaction.Transaction
                      , Blockchain.Blockchain
                      , Consensus.Consensus
                      , Cryptography.Hash
                      , MerkleTree.MerkleTree
                      , Cryptography.HomomorphicEncryption
                      , Security.KeyEnv
                      , ZKP.ZKP
  other-modules:       
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5
                    , cryptonite
                    , bytestring
                    , text
                    , stm
                    , time
                    , containers
                    , blake2
                    , bytestring
                    , aeson
                    , network
                    , base64-bytestring
                    , memory

executable lambdachain-exe
    hs-source-dirs:      src/app
    main-is:             Main.hs
    ghc-options:         -Wall -threaded -rtsopts
    build-depends:       base >=4.7 && <5
                       , lambdachain
                       , containers
                       , text
                       , stm
                       , warp
                       , wai
                       , http-types
                       , aeson
                       , bytestring

test-suite lambdachain-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5
                     , lambdachain
                     , cryptonite
                     , containers
                     , bytestring
                     , hspec >=2.0
                     , QuickCheck >=2.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
